--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,8 @@
 						<properties>							
 							<env>dev</env>
 							<api.id>16859864</api.id>
-							<anypoint.platform.client_id>${anypoint.platform.client_id}</anypoint.platform.client_id>
-							<anypoint.platform.client_secret>${anypoint.platform.client_secret}</anypoint.platform.client_secret>
+							<anypoint.platform.client_id>7dd4d3ad6b274f508eb7cd029a522148</anypoint.platform.client_id>
+							<anypoint.platform.client_secret>e96FE521e8C44B56827470E0990dD3a1</anypoint.platform.client_secret>
 							
 						</properties>
 					</cloudHubDeployment>
@@ -106,8 +106,8 @@
 					<cloudHubDeployment>
 						<uri>https://anypoint.mulesoft.com</uri>
 						<muleVersion>4.3.0</muleVersion>
-						<username>${username}</username>
-						<password>${password}</password>
+						<username>vreddygari-e</username>
+						<password>Reddy_123</password>
 						<objectStoreV2>true</objectStoreV2>
 						<properties>
 							<http.port>8081</http.port>
